--- a/template.html
+++ b/template.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 	<title>Beam.js Documentation Browser</title>
+	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/css/print.css" type="text/css" media="print">
+    <!--[if lt IE 8]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen, projection"><![endif]-->
+   <style type="text/css" media="screen">
+      html { margin: 20px; }
+      p, table, hr, .box { margin-bottom:25px; }
+      .box p { margin-bottom:10px; }
+    </style>
+
 </head>
 <body>
 
