--- a/template.html
+++ b/template.html
@@ -3,31 +3,33 @@
 <head>
 	<title>Beam.js Documentation Browser</title>
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="/css/print.css" type="text/css" media="print">
-    <!--[if lt IE 8]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen, projection"><![endif]-->
-   <style type="text/css" media="screen">
-      html { margin: 20px; }
-      p, table, hr, .box { margin-bottom:25px; }
-      .box p { margin-bottom:10px; }
-    </style>
+	<link rel="stylesheet" href="/css/print.css" type="text/css" media="print">
+	<!--[if lt IE 8]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen, projection"><![endif]-->
+	<style type="text/css" media="screen">
+	html { margin: 20px; }
+	p, table, hr, .box { margin-bottom:25px; }
+	.box p { margin-bottom:10px; }
+	</style>
 
 </head>
 <body>
 
-<h1><em>${ typeof this.topics }</em> ${ this.key }</h1>
+	<div id="content">
+		<h1><em>${ typeof this.topics }</em> ${ this.key }</h1>
 
-${ this.doc, showdown }
+		${ this.doc, showdown }
 
-<hr />
+		<hr />
 
-$(MAPHASH (topic, obj => this.topics)
-	<h2><em>${ typeof obj }</em> <a href="${ this.path }${ topic }">${ topic }</a></h2>
+		$(MAPHASH (topic, obj => this.topics)
+		<h2><em>${ typeof obj }</em> <a href="${ this.path }${ topic }">${ topic }</a></h2>
 		$(IF (obj.__doc__ != undefined)
-			${ obj.__doc__, showdown }
+		${ obj.__doc__, showdown }
 		$)
-	<hr />
-$)
+		<hr />
+		$)
 
-Powered by <a href="https://github.com/beamjs/beamjs_doc_browser">Beam.js Documentation Browser</a> <em>Beam.js ${ this.version } </em>
+		Powered by <a href="https://github.com/beamjs/beamjs_doc_browser">Beam.js Documentation Browser</a> <em>Beam.js ${ this.version } </em>
+	</div>
 </body>
 </html>
