--- a/template.html
+++ b/template.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Beam.js Documentation Browser</title>
-	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="/css/print.css" type="text/css" media="print">
-	<!--[if lt IE 8]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen, projection"><![endif]-->
-	<style type="text/css" media="screen">
-	html { margin: 20px; }
-	p, table, hr, .box { margin-bottom:25px; }
-	.box p { margin-bottom:10px; }
-	</style>
+    <head>
+        <title>Beam.js Documentation Browser</title>
+        <!--<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">-->
+        <!--<link rel="stylesheet" href="/css/print.css" type="text/css" media="print">-->
+        <!--[>[if lt IE 8]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen, projection"><![endif]<]-->
+        <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="/css/fonts.css" type="text/css" media="screen">
+        <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen">
+    </head>
+    <body>
+        <header>
+            <h1><a href="/">Beam.js</a></h1>
+        </header>
+        <div class="content-wrapper">
+            <section class="content">
 
-</head>
-<body>
+                <h2><em>${ typeof this.topics }</em> ${ this.key }</h2>
 
-	<div id="content">
-		<h1><em>${ typeof this.topics }</em> ${ this.key }</h1>
+                ${ this.doc, showdown }
 
-		${ this.doc, showdown }
+                <hr />
 
-		<hr />
+                $(MAPHASH (topic, obj => this.topics)
+                <h3 id="${ topic }"><em>${ typeof obj }</em> <a href="${ this.path }${ topic }">${ topic }</a></h3>
+                $(IF (obj.__doc__ != undefined)
+                ${ obj.__doc__, showdown }
+                $(ELSE)
+                ${ "__undocumented__", showdown }
+                $)
+                <hr />
+                $)
 
-		$(MAPHASH (topic, obj => this.topics)
-		<h2><em>${ typeof obj }</em> <a href="${ this.path }${ topic }">${ topic }</a></h2>
-		$(IF (obj.__doc__ != undefined)
-		${ obj.__doc__, showdown }
-		$)
-		<hr />
-		$)
+                <footer>
+                    Powered by <a href="https://github.com/beamjs/beamjs_doc_browser">Beam.js Documentation Browser</a> <em>Beam.js ${ this.version } </em>
+                </footer>
+            </section>
+        </div>
 
-		Powered by <a href="https://github.com/beamjs/beamjs_doc_browser">Beam.js Documentation Browser</a> <em>Beam.js ${ this.version } </em>
-	</div>
-</body>
+    </body>
 </html>
