More styles for "pre code"

--- a/template.html
+++ b/template.html
@@ -29,7 +29,7 @@
                 $(IF (obj.__doc__ != undefined)
                 ${ obj.__doc__, showdown }
                 $(ELSE)
-                ${ "__undocumented__", showdown }
+                ${ "*undocumented*", showdown }
                 $)
                 <hr />
                 $)
