Fixed a bug (wasn't showing topic type, properly fixed now)

--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
         <div class="content-wrapper">
             <section class="content">
 
-                <h2><em>${ this.topics, typeOf }</em> ${ this.key }</h2>
+                <h2><em>${ this.obj, typeOf }</em> ${ this.key }</h2>
 
                 ${ this.doc, showdown }
 
