Colors for pre code (currently with dirty hack in showdown.js)

--- a/template.html
+++ b/template.html
@@ -10,11 +10,18 @@
         <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/css/fonts.css" type="text/css" media="screen">
         <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen">
+	<script type="text/javascript" src="/js/code_highlighter.js"></script>
+	<script type="text/javascript" src="/js/javascript.js"></script>
     </head>
     <body>
         <header>
             <h1><a href="/">Beam.js</a></h1>
         </header>
+	<pre><code class="javascript">var x = 1;
+	function aloha() {
+		return x * x;
+	}
+	</code></pre>
         <div class="content-wrapper">
             <section class="content">
 
